[gd_scene load_steps=9 format=2]

[ext_resource path="res://gui/header/header.gd" type="Script" id=1]
[ext_resource path="res://gui/header/lifebar_bg2_icon.png" type="Texture" id=2]
[ext_resource path="res://gui/header/lifebar_bg2.png" type="Texture" id=3]
[ext_resource path="res://gui/header/lifebar_fill2.png" type="Texture" id=4]
[ext_resource path="res://gui/header/score_bg.png" type="Texture" id=5]
[ext_resource path="res://gui/font/montserrat_black.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 6 )

[node name="Header" type="MarginContainer"]
editor/display_folded = true
margin_right = 640.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 600.236, 224.332, 249.196, 375.231 ]
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 640.0
margin_bottom = 66.0
custom_constants/separation = 0
alignment = 1

[node name="Bar1" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 263.0
margin_bottom = 66.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Bar1"]
margin_right = 67.0
margin_bottom = 66.0
texture = ExtResource( 2 )

[node name="TextureProgress" type="TextureProgress" parent="HBoxContainer/Bar1"]
margin_left = 67.0
margin_right = 263.0
margin_bottom = 44.0
size_flags_vertical = 0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="Bar2" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 263.0
margin_right = 480.0
margin_bottom = 66.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
alignment = 1

[node name="Time" type="MarginContainer" parent="HBoxContainer/Bar2"]
margin_left = 58.0
margin_right = 158.0
margin_bottom = 66.0

[node name="Background" type="NinePatchRect" parent="HBoxContainer/Bar2/Time"]
margin_right = 100.0
margin_bottom = 66.0
rect_min_size = Vector2( 100, 50 )
texture = ExtResource( 5 )

[node name="Seconds" type="Label" parent="HBoxContainer/Bar2/Time/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.992157, 0.435294, 0.435294, 1 )
text = "0"
align = 1

[node name="Bar3" type="HBoxContainer" parent="HBoxContainer"]
editor/display_folded = true
margin_left = 480.0
margin_right = 640.0
margin_bottom = 66.0

[node name="Level" type="MarginContainer" parent="HBoxContainer/Bar3"]
margin_right = 160.0
margin_bottom = 66.0

[node name="Background" type="NinePatchRect" parent="HBoxContainer/Bar3/Level"]
margin_right = 160.0
margin_bottom = 66.0
rect_min_size = Vector2( 160, 50 )
texture = ExtResource( 5 )

[node name="Title" type="Label" parent="HBoxContainer/Bar3/Level/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
rect_min_size = Vector2( 160, 0 )
custom_fonts/font = SubResource( 2 )
text = "Level"
valign = 1

[node name="Number" type="Label" parent="HBoxContainer/Bar3/Level/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -10.0
custom_fonts/font = SubResource( 2 )
text = "1"
align = 2
valign = 1

[node name="TimeOutTimer" type="Timer" parent="."]

[node name="BlinkSecondsTimer" type="Timer" parent="."]
[connection signal="timeout" from="TimeOutTimer" to="." method="_on_TimerTimeOut_timeout"]
[connection signal="timeout" from="BlinkSecondsTimer" to="." method="_on_BlinkSecondsTimer_timeout"]
